Making a image search mechanism